Fixed Input in GetForm

--- a/Partials/GetForm.html
+++ b/Partials/GetForm.html
@@ -5,8 +5,8 @@
             <option value="EUR">EUR</option>
             <option value="UAH">UAH</option>
         </select>
-        <input type="number" id="amount" placeholder="Введіть суму"
-               class="py-2.5 px-4 border border-gray-300 rounded-r-lg w-32">
+        <input  id="amount" placeholder="Результат"
+               class="py-2.5 px-4  rounded-r-lg w-32" />
     </div>
 </form>
 
